@@ -19,6 +19,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Queue;
 import java.util.UUID;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -36,6 +37,7 @@ import io.debezium.pipeline.signal.actions.snapshotting.AdditionalCondition;
 import io.debezium.relational.Table;
 import io.debezium.relational.TableId;
 import io.debezium.util.HexConverter;
+import io.debezium.util.Strings;
 
 /**
  * A class describing current state of incremental snapshot
@@ -50,22 +52,14 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
 
     // TODO Consider which (if any) information should be exposed in source info
     public static final String INCREMENTAL_SNAPSHOT_KEY = "incremental_snapshot";
-    public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY = INCREMENTAL_SNAPSHOT_KEY + "_collections";
-
-    public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID = DATA_COLLECTIONS_TO_SNAPSHOT_KEY + "_id";
-
-    public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION = DATA_COLLECTIONS_TO_SNAPSHOT_KEY
-            + "_additional_condition";
-
-    public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY = DATA_COLLECTIONS_TO_SNAPSHOT_KEY
-            + "_surrogate_key";
 
     public static final String EVENT_PRIMARY_KEY = INCREMENTAL_SNAPSHOT_KEY + "_primary_key";
     public static final String TABLE_MAXIMUM_KEY = INCREMENTAL_SNAPSHOT_KEY + "_maximum_key";
     public static final String CORRELATION_ID = INCREMENTAL_SNAPSHOT_KEY + "_correlation_id";
+    private final SnapshotDataCollection<T> snapshotDataCollection = new SnapshotDataCollection<>();
 
     /**
-     * @code(true) if window is opened and deduplication should be executed
+     * {@code true} if window is opened and deduplication should be executed
      */
     protected boolean windowOpened = false;
 
@@ -77,7 +71,6 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
     // TODO After extracting add into source info optional block
     // incrementalSnapshotWindow{String from, String to}
     // State to be stored and recovered from offsets
-    private final Queue<DataCollection<T>> dataCollectionsToSnapshot = new LinkedList<>();
 
     private final boolean useCatalogBeforeSchema;
     /**
@@ -102,11 +95,8 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
     /**
      * Determines if the incremental snapshot was paused or not.
      */
-    private AtomicBoolean paused = new AtomicBoolean(false);
-    private ObjectMapper mapper = new ObjectMapper();
-
-    private TypeReference<List<LinkedHashMap<String, String>>> mapperTypeRef = new TypeReference<>() {
-    };
+    private final AtomicBoolean paused = new AtomicBoolean(false);
+    private final LinkedBlockingQueue<String> dataCollectionsToStop = new LinkedBlockingQueue<>();
 
     public AbstractIncrementalSnapshotContext(boolean useCatalogBeforeSchema) {
         this.useCatalogBeforeSchema = useCatalogBeforeSchema;
@@ -183,43 +173,15 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
         }
     }
 
-    private String dataCollectionsToSnapshotAsString() {
-        // TODO Handle non-standard table ids containing dots, commas etc.
-        try {
-            List<LinkedHashMap<String, String>> dataCollectionsMap = dataCollectionsToSnapshot.stream()
-                    .map(x -> {
-                        LinkedHashMap<String, String> map = new LinkedHashMap<>();
-                        map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID, x.getId().toString());
-                        map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION,
-                                x.getAdditionalCondition().isEmpty() ? null : x.getAdditionalCondition().orElse(null));
-                        map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY, x.getSurrogateKey().isEmpty() ? null : x.getSurrogateKey().orElse(null));
-                        return map;
-                    })
-                    .collect(Collectors.toList());
-            return mapper.writeValueAsString(dataCollectionsMap);
-        }
-        catch (JsonProcessingException e) {
-            throw new DebeziumException("Cannot serialize dataCollectionsToSnapshot information");
-        }
-    }
-
-    private List<DataCollection<T>> stringToDataCollections(String dataCollectionsStr) {
-        try {
-            List<LinkedHashMap<String, String>> dataCollections = mapper.readValue(dataCollectionsStr, mapperTypeRef);
-            List<DataCollection<T>> dataCollectionsList = dataCollections.stream()
-                    .map(x -> new DataCollection<T>((T) TableId.parse(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID), useCatalogBeforeSchema),
-                            Optional.ofNullable(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION)).orElse(""),
-                            Optional.ofNullable(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY)).orElse("")))
-                    .collect(Collectors.toList());
-            return dataCollectionsList;
-        }
-        catch (JsonProcessingException e) {
-            throw new DebeziumException("Cannot de-serialize dataCollectionsToSnapshot information");
-        }
+    @Override
+    public List<String> getDataCollectionsToStop() {
+        List<String> drainedList = new ArrayList<>();
+        dataCollectionsToStop.drainTo(drainedList);
+        return drainedList;
     }
 
     public boolean snapshotRunning() {
-        return !dataCollectionsToSnapshot.isEmpty();
+        return !snapshotDataCollection.isEmpty();
     }
 
     public Map<String, Object> store(Map<String, Object> offset) {
@@ -228,54 +190,70 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
         }
         offset.put(EVENT_PRIMARY_KEY, arrayToSerializedString(lastEventKeySent));
         offset.put(TABLE_MAXIMUM_KEY, arrayToSerializedString(maximumKey));
-        offset.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY, dataCollectionsToSnapshotAsString());
+        offset.put(SnapshotDataCollection.DATA_COLLECTIONS_TO_SNAPSHOT_KEY, snapshotDataCollection.dataCollectionsAsJsonString());
         offset.put(CORRELATION_ID, correlationId);
         return offset;
     }
 
     private void addTablesIdsToSnapshot(List<DataCollection<T>> dataCollectionIds) {
-        dataCollectionsToSnapshot.addAll(dataCollectionIds);
+        snapshotDataCollection.add(dataCollectionIds);
     }
 
     @SuppressWarnings("unchecked")
     public List<DataCollection<T>> addDataCollectionNamesToSnapshot(String correlationId, List<String> dataCollectionIds, List<AdditionalCondition> additionalCondition,
                                                                     String surrogateKey) {
 
+        LOGGER.trace("Adding data collections names {} to snapshot", dataCollectionIds);
         final List<DataCollection<T>> newDataCollectionIds = dataCollectionIds.stream()
                 .map(buildDataCollection(additionalCondition, surrogateKey))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
                 .collect(Collectors.toList());
         addTablesIdsToSnapshot(newDataCollectionIds);
         this.correlationId = correlationId;
         return newDataCollectionIds;
     }
 
-    private Function<String, DataCollection<T>> buildDataCollection(List<AdditionalCondition> additionalCondition, String surrogateKey) {
+    private Function<String, Optional<DataCollection<T>>> buildDataCollection(List<AdditionalCondition> additionalCondition, String surrogateKey) {
         return expandedCollectionName -> {
             String filter = additionalCondition.stream()
                     .filter(condition -> condition.getDataCollection().matcher(expandedCollectionName).matches())
                     .map(AdditionalCondition::getFilter)
                     .findFirst()
                     .orElse("");
-            return new DataCollection<T>((T) TableId.parse(expandedCollectionName, useCatalogBeforeSchema), filter, surrogateKey);
+            try {
+                TableId parsedTable = TableId.parse(expandedCollectionName, useCatalogBeforeSchema);
+                return Optional.of(new DataCollection<T>((T) parsedTable, filter, surrogateKey));
+            }
+            catch (Exception e) {
+                LOGGER.warn("Unable to parse table identifier from {}. Skipping it.", expandedCollectionName);
+                return Optional.empty();
+            }
         };
     }
 
     @Override
-    public void stopSnapshot() {
-        this.dataCollectionsToSnapshot.clear();
-        this.correlationId = null;
+    public void requestSnapshotStop(List<String> dataCollectionIds) {
+        if (snapshotRunning()) {
+            if (dataCollectionIds == null || dataCollectionIds.isEmpty()) {
+                dataCollectionsToStop.add(".*");
+            }
+            else {
+                dataCollectionsToStop.addAll(dataCollectionIds);
+            }
+        }
     }
 
     @Override
     @SuppressWarnings("unchecked")
     public boolean removeDataCollectionFromSnapshot(String dataCollectionId) {
         final T collectionId = (T) TableId.parse(dataCollectionId, useCatalogBeforeSchema);
-        return dataCollectionsToSnapshot.removeAll(Arrays.asList(new DataCollection<T>(collectionId)));
+        return snapshotDataCollection.remove(List.of(new DataCollection<>(collectionId)));
     }
 
     @Override
     public List<DataCollection<T>> getDataCollections() {
-        return new ArrayList<>(dataCollectionsToSnapshot);
+        return new ArrayList<>(snapshotDataCollection.getDataCollectionsToSnapshot());
     }
 
     @Override
@@ -297,10 +275,10 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
         final String maximumKeyStr = (String) offsets.get(TABLE_MAXIMUM_KEY);
         context.maximumKey = (maximumKeyStr != null) ? context.serializedStringToArray(TABLE_MAXIMUM_KEY, maximumKeyStr)
                 : null;
-        final String dataCollectionsStr = (String) offsets.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY);
-        context.dataCollectionsToSnapshot.clear();
+        final String dataCollectionsStr = (String) offsets.get(SnapshotDataCollection.DATA_COLLECTIONS_TO_SNAPSHOT_KEY);
+        context.snapshotDataCollection.clear();
         if (dataCollectionsStr != null) {
-            context.addTablesIdsToSnapshot(context.stringToDataCollections(dataCollectionsStr));
+            context.addTablesIdsToSnapshot(context.snapshotDataCollection.stringToDataCollections(dataCollectionsStr, context.useCatalogBeforeSchema));
         }
         context.correlationId = (String) offsets.get(CORRELATION_ID);
         return context;
@@ -311,11 +289,11 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
     }
 
     public DataCollection<T> currentDataCollectionId() {
-        return dataCollectionsToSnapshot.peek();
+        return snapshotDataCollection.peek();
     }
 
     public int dataCollectionsToBeSnapshottedCount() {
-        return dataCollectionsToSnapshot.size();
+        return snapshotDataCollection.size();
     }
 
     public void nextChunkPosition(Object[] end) {
@@ -345,7 +323,7 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
 
     public DataCollection<T> nextDataCollection() {
         resetChunk();
-        return dataCollectionsToSnapshot.poll();
+        return snapshotDataCollection.getNext();
     }
 
     public void startNewChunk() {
@@ -389,8 +367,113 @@ public class AbstractIncrementalSnapshotContext<T> implements IncrementalSnapsho
     @Override
     public String toString() {
         return "IncrementalSnapshotContext [windowOpened=" + windowOpened + ", chunkEndPosition="
-                + Arrays.toString(chunkEndPosition) + ", dataCollectionsToSnapshot=" + dataCollectionsToSnapshot
+                + Arrays.toString(chunkEndPosition) + ", dataCollectionsToSnapshot=" + snapshotDataCollection.getDataCollectionsToSnapshot()
                 + ", lastEventKeySent=" + Arrays.toString(lastEventKeySent) + ", maximumKey="
                 + Arrays.toString(maximumKey) + "]";
+    }
+
+    private static class SnapshotDataCollection<T> extends LinkedBlockingQueue<DataCollection<T>> {
+
+        public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY = INCREMENTAL_SNAPSHOT_KEY + "_collections";
+
+        public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID = DATA_COLLECTIONS_TO_SNAPSHOT_KEY + "_id";
+
+        public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION = DATA_COLLECTIONS_TO_SNAPSHOT_KEY
+                + "_additional_condition";
+
+        public static final String DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY = DATA_COLLECTIONS_TO_SNAPSHOT_KEY
+                + "_surrogate_key";
+        private final ObjectMapper mapper = new ObjectMapper();
+        private final TypeReference<List<LinkedHashMap<String, String>>> mapperTypeRef = new TypeReference<>() {
+        };
+        private final Queue<DataCollection<T>> dataCollectionsToSnapshot = new LinkedList<>();
+        private String dataCollectionsToSnapshotJson;
+
+        SnapshotDataCollection() {
+        }
+
+        void add(List<DataCollection<T>> dataCollectionIds) {
+            this.dataCollectionsToSnapshot.addAll(dataCollectionIds);
+            this.dataCollectionsToSnapshotJson = computeJsonString();
+        }
+
+        DataCollection<T> getNext() {
+            DataCollection<T> nextDataCollection = this.dataCollectionsToSnapshot.poll();
+            this.dataCollectionsToSnapshotJson = computeJsonString();
+            return nextDataCollection;
+        }
+
+        public DataCollection<T> peek() {
+            return this.dataCollectionsToSnapshot.peek();
+        }
+
+        public int size() {
+            return this.dataCollectionsToSnapshot.size();
+        }
+
+        public void clear() {
+            this.dataCollectionsToSnapshot.clear();
+            this.dataCollectionsToSnapshotJson = null;
+        }
+
+        public boolean isEmpty() {
+            return this.dataCollectionsToSnapshot.isEmpty();
+        }
+
+        public boolean remove(List<DataCollection<T>> toRemove) {
+            boolean removed = this.dataCollectionsToSnapshot.removeAll(toRemove);
+            this.dataCollectionsToSnapshotJson = computeJsonString();
+            return removed;
+        }
+
+        public String dataCollectionsAsJsonString() {
+
+            if (!Strings.isNullOrEmpty(dataCollectionsToSnapshotJson)) {
+                // A cached value to improve performance since this method is called in the "store"
+                // that is called during events processing
+                return dataCollectionsToSnapshotJson;
+            }
+
+            return computeJsonString();
+        }
+
+        public Queue<DataCollection<T>> getDataCollectionsToSnapshot() {
+            return this.dataCollectionsToSnapshot;
+        }
+
+        private String computeJsonString() {
+            // TODO Handle non-standard table ids containing dots, commas etc.
+
+            try {
+                List<LinkedHashMap<String, String>> dataCollectionsMap = dataCollectionsToSnapshot.stream()
+                        .map(x -> {
+                            LinkedHashMap<String, String> map = new LinkedHashMap<>();
+                            map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID, x.getId().toString());
+                            map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION, x.getAdditionalCondition().orElse(null));
+                            map.put(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY, x.getSurrogateKey().orElse(null));
+                            return map;
+                        })
+                        .collect(Collectors.toList());
+
+                return mapper.writeValueAsString(dataCollectionsMap);
+            }
+            catch (JsonProcessingException e) {
+                throw new DebeziumException("Cannot serialize dataCollectionsToSnapshot information");
+            }
+        }
+
+        private List<DataCollection<T>> stringToDataCollections(String dataCollectionsStr, boolean useCatalogBeforeSchema) {
+            try {
+                List<LinkedHashMap<String, String>> dataCollections = mapper.readValue(dataCollectionsStr, mapperTypeRef);
+                return dataCollections.stream()
+                        .map(x -> new DataCollection<>((T) TableId.parse(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ID), useCatalogBeforeSchema),
+                                Optional.ofNullable(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_ADDITIONAL_CONDITION)).orElse(""),
+                                Optional.ofNullable(x.get(DATA_COLLECTIONS_TO_SNAPSHOT_KEY_SURROGATE_KEY)).orElse("")))
+                        .collect(Collectors.toList());
+            }
+            catch (JsonProcessingException e) {
+                throw new DebeziumException("Cannot de-serialize dataCollectionsToSnapshot information");
+            }
+        }
     }
 }
