@@ -25,6 +25,7 @@ import java.util.TimeZone;
 import java.util.regex.Pattern;
 
 import org.apache.kafka.common.config.ConfigDef;
+import org.apache.kafka.connect.components.Versioned;
 import org.apache.kafka.connect.connector.ConnectRecord;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.data.Struct;
@@ -35,6 +36,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import io.debezium.DebeziumException;
+import io.debezium.Module;
 import io.debezium.config.Configuration;
 import io.debezium.config.Field;
 import io.debezium.data.Envelope;
@@ -50,7 +52,7 @@ import io.debezium.time.ZonedTimestamp;
  *
  */
 
-public class TimezoneConverter<R extends ConnectRecord<R>> implements Transformation<R> {
+public class TimezoneConverter<R extends ConnectRecord<R>> implements Transformation<R>, Versioned {
     private static final Logger LOGGER = LoggerFactory.getLogger(TimezoneConverter.class);
 
     private static final Field CONVERTED_TIMEZONE = Field.create("converted.timezone")
@@ -92,8 +94,11 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
     private String convertedTimezone;
     private List<String> includeList;
     private List<String> excludeList;
-    private static final String SOURCE = "source";
+    private static final String SOURCE = Envelope.FieldName.SOURCE;
     private static final String TOPIC = "topic";
+    private static final String FIELD_SOURCE_PREFIX = Envelope.FieldName.SOURCE + ".";
+    private static final String FIELD_BEFORE_PREFIX = Envelope.FieldName.BEFORE + ".";
+    private static final String FIELD_AFTER_PREFIX = Envelope.FieldName.AFTER + ".";
     private static final Pattern TIMEZONE_OFFSET_PATTERN = Pattern.compile("^[+-]\\d{2}:\\d{2}(:\\d{2})?$");
     private static final Pattern LIST_PATTERN = Pattern.compile("^\\[(source|topic|[\".\\w\\s_]+):([\".\\w\\s_]+(?::[\".\\w\\s_]+)?(?:,|]$))+$");
     private final Map<String, Set<String>> topicFieldsMap = new HashMap<>();
@@ -128,8 +133,6 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         }
 
         Struct value = (Struct) record.value();
-        Schema schema = value.schema();
-
         String table = getTableFromSource(value);
         String topic = record.topic();
 
@@ -190,19 +193,25 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
                 if (!topicFieldsMap.containsKey(matchName)) {
                     topicFieldsMap.put(matchName, new HashSet<>());
                 }
-                topicFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    topicFieldsMap.get(matchName).add(field);
+                }
             }
             else if (Objects.equals(commonPrefix, SOURCE)) {
                 if (!tableFieldsMap.containsKey(matchName)) {
                     tableFieldsMap.put(matchName, new HashSet<>());
                 }
-                tableFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    tableFieldsMap.get(matchName).add(field);
+                }
             }
             else {
                 if (!noPrefixFieldsMap.containsKey(matchName)) {
                     noPrefixFieldsMap.put(matchName, new HashSet<>());
                 }
-                noPrefixFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    noPrefixFieldsMap.get(matchName).add(field);
+                }
             }
         }
     }
@@ -245,6 +254,11 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
 
     @Override
     public void close() {
+    }
+
+    @Override
+    public String version() {
+        return Module.version();
     }
 
     private enum Type {
@@ -307,12 +321,38 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
 
         Struct before = getStruct(value, Envelope.FieldName.BEFORE);
         Struct after = getStruct(value, Envelope.FieldName.AFTER);
+        Struct source = getStruct(value, Envelope.FieldName.SOURCE);
+
+        Set<String> beforeFields = new HashSet<>();
+        Set<String> afterFields = new HashSet<>();
+        Set<String> sourceFields = new HashSet<>();
+
+        if (!fields.isEmpty()) {
+            for (String field : fields) {
+                if (field.startsWith(FIELD_SOURCE_PREFIX)) {
+                    sourceFields.add(field.substring(FIELD_SOURCE_PREFIX.length()));
+                }
+                else if (field.startsWith(FIELD_BEFORE_PREFIX)) {
+                    beforeFields.add(field.substring(FIELD_BEFORE_PREFIX.length()));
+                }
+                else if (field.startsWith(FIELD_AFTER_PREFIX)) {
+                    afterFields.add(field.substring(FIELD_AFTER_PREFIX.length()));
+                }
+                else {
+                    beforeFields.add(field);
+                    afterFields.add(field);
+                }
+            }
+        }
 
         if (before != null) {
-            handleValueForFields(before, type, fields);
+            handleValueForFields(before, type, beforeFields);
         }
         if (after != null) {
-            handleValueForFields(after, type, fields);
+            handleValueForFields(after, type, afterFields);
+        }
+        if (source != null && !sourceFields.isEmpty()) {
+            handleValueForFields(source, type, sourceFields);
         }
     }
 
@@ -472,15 +512,12 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         Set<String> fields = matchFieldsResult.getFields();
 
         if (matchName != null) {
-            if (!fields.contains(null)) {
+            if (!fields.isEmpty()) {
                 handleStructs(value, Type.INCLUDE, matchName, fields);
             }
             else {
                 handleStructs(value, Type.ALL, matchName, fields);
             }
-        }
-        else {
-            handleStructs(value, Type.ALL, table, Set.of(""));
         }
     }
 
@@ -490,16 +527,16 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         Set<String> fields = matchFieldsResult.getFields();
 
         if (matchName == null) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
-        else if (!fields.contains(null)) {
+        else if (!fields.isEmpty()) {
             handleStructs(value, Type.EXCLUDE, matchName, fields);
         }
     }
 
     private void handleAllRecords(Struct value, String table, String topic) {
         if (!topicFieldsMap.containsKey(topic) && !tableFieldsMap.containsKey(table) && !noPrefixFieldsMap.containsKey(table)) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
     }
 }
